log/build_2023-03-24_08-30-43/sample_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/tony_stark/ros2_ws/install/sample_package/lib/python3.10/site-packages/sample_package/sensor_publish.py", line 14
    	lmsg.data=map(float,input().split()))
    	                                    ^
SyntaxError: unmatched ')'

